--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,15 @@ p {
 }
 
 h1 {
-    font-size: 2em;
+    font-size: 1.5em;
     font-weight: 700;
     margin-bottom: 0.375em;
+}
+
+h2 {
+    font-size: 1.250em;
+    padding-top: 1em;
+    padding-bottom: 1.0313em;
 }
 
 input {
@@ -37,24 +43,15 @@ input {
 label {
     transition: all 0.3s ease;
     color: #999999;
-    display: block;
-    position: relative;
+    font-size: 1em;
 }
 
 input, button, p {
     font-size: 0.875em;
 }
 
-input:focus + label {
-    transition: all 0.3s ease;
-    color: orange;
-    font-size: 10px;
-    margin-bottom: 10px;
-}
-
-form input:focus div section div button {
-    background-color: black;
-    border: 2px solid grey;
+button:focus, button:active, button:visited {
+    outline: none;
 }
 
 input:focus { 
@@ -82,6 +79,9 @@ button {
     display: inline;
 }
 
+
+
+
 header {
     width: 100%;
     height: 2.500em;
@@ -96,13 +96,14 @@ header img {
     box-sizing: border-box;
 }
 
-body > div {
+body > div:nth-child(2) {
     background: url('../img/U-OV-busstation-bussen.jpg') no-repeat center;
     background-size: cover;
     height: auto;
     width: 100%;
     padding: 1.875em 1em;
     margin-left: -1em;
+    margin-bottom: 1.5em;
 }
 
 body div section {
@@ -113,18 +114,22 @@ body div section {
     box-shadow: 0 1.333em 3em 0 rgba(103,92,83,.3);
 }
 
-body div section label {
+body div section form:nth-child(2) label input {
     border-bottom: 2px solid #999999;
 }
 
-body div section form input {
+body div section form:nth-child(2) label input:focus {
+    border-color: #e7772b;
+}
+
+body div section form:nth-child(2) input {
     border: none;
     color: black;
     width: 100%;
-    padding: 0.5em;
+    padding: 0.5em 0;
 }
 
-body div section div {
+body div section form:nth-child(2) div {
     background-color: #f7f5f1;
     padding: 0.938em;
     margin-top: 1.250em;
@@ -138,8 +143,54 @@ body div section div button:first-child:after {
     margin-left: 0.4em;
 }
 
+
+
+
+
+
+/* Dit is het formulier voor de filteropties. Deze staat nu uit voor styling */
+/*body div section form:nth-child(3) {
+   display: none;
+}*/
+
+body div section form:nth-child(3) label {
+    display: block;
+    padding: 0.47em 0;
+}
+
+body div section form:nth-child(3) label p {
+    width: 80%;
+}
+
+body div section form:nth-child(3) p, body div section form:nth-child(3) input {
+    display: inline-block;
+}
+
+body div section form:nth-child(3) input {
+    border: 2px solid black;
+    border-radius: 3px;
+    display: inline;
+}
+
+body div section form:nth-child(3) input:after {
+    content: "(10)";
+    display: table;
+    margin-left: 2em;
+    font-size: 0.7em;
+    vertical-align: middle;
+}
+
+body div section form:nth-child(3) input:checked + body div section form:nth-child(3) label {
+    background-color: black;
+}
+
+
+
+
+
+
 body main {
-    margin: 3em 0;
+    margin: 0 0 1.5em 0;
 }
 
 article {
@@ -149,22 +200,19 @@ article {
 }
 
 article img {
-    width: 100%;
-    height: 10em;
-    overflow: hidden;
     border-radius: 0.667em 0.667em 0 0;
+    height: 7.313em;
+    object-fit: cover;
+    width: 100%;
 }
 
 article span {
     width: 50%;
 }
 
-article h2, article footer, article span {
+article h3, article footer {
     padding: 0 1em;
     box-sizing: border-box;
-}
-article h2 {
-    padding-top: 1em;
 }
 
 article p {
