--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
 /*  first-of-type pakt het eerste element in een bepaald rijtje     */
 /*  nth-of-type(2n + 1) begin bij de eerste selector doe om de twee bepaalde styling  */
 
+
+/*   BEGIN ALGEMEEN   */
+
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
 html {
     padding: 0;
@@ -16,7 +19,7 @@ html {
 }
 
 body {
-    padding: 0 1em;
+    padding: 0 0.938em;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -28,13 +31,17 @@ p {
     margin: 0;
 }
 
+h1, h2, h3, h4, legend {
+    font-weight: 700;
+}
+
 h1 {
     font-size: 1.5em;
     font-weight: 700;
     margin-bottom: 0.375em;
 }
 
-h2 {
+h2, legend {
     font-size: 1.250em;
     padding-top: 1em;
     padding-bottom: 1.0313em;
@@ -49,8 +56,9 @@ input {
 
 label {
     transition: all 0.3s ease;
-    color: #999999;
+    color: #000;
     font-size: 1em;
+    font-weight: 500;
 }
 
 input, button, p {
@@ -71,10 +79,8 @@ textarea:focus {
     border-color: rgba(0, 0, 0, 0);
 }
 
-button:nth-child(2) {
+section form div button:nth-of-type(2) {
     background-color: #d6cfc7;
-    float: right;
-    position: relative;
 }
 
 button {
@@ -86,12 +92,19 @@ button {
     display: inline;
 }
 
+/*   EINDE ALGEMEEN   */
 
 
+
+/*   BEGIN HEADER HOME   */
 
 header {
     width: 100%;
     height: 2.500em;
+    position: fixed;
+    background-color: white;
+    margin-left: -15px;
+    top: 0;
 }
 
 header img {
@@ -103,101 +116,48 @@ header img {
     box-sizing: border-box;
 }
 
-body > div:nth-child(2) {
-    background: url('../img/U-OV-busstation-bussen.jpg') no-repeat center;
-    background-size: cover;
-    height: auto;
-    width: 100%;
-    padding: 1.875em 1em;
-    margin-left: -1em;
-    margin-bottom: 1.5em;
+header a:nth-child(2):before {
+    content: '';
+    display: inline-block;
+    background-image: url('../img/icons/mijn-u-ov.svg');
+    width: 16px;
+    height: 19px;
 }
 
-body div section {
-    padding: 1.875em 0.938em 0 0.938em;
-    background-color: white;
-    border-radius: 10px;
-    -webkit-box-shadow: 0 1.333em 3em 0 rgba(103,92,83,.3);
-    box-shadow: 0 1.333em 3em 0 rgba(103,92,83,.3);
-}
-
-body div section form:nth-child(2) label input {
-    border-bottom: 2px solid #999999;
-}
-
-body div section form:nth-child(2) label input:focus {
-    border-color: #e7772b;
-}
-
-body div section form:nth-child(2) input {
-    border: none;
-    color: black;
-    width: 100%;
-    padding: 0.5em 0;
-}
-
-body div section form:nth-child(2) div {
-    background-color: #f7f5f1;
-    padding: 0.938em;
-    margin-top: 1.250em;
-    width: 100%;
-    margin-left: -0.9375em;
-    border-radius: 0 0 0.667em 0.667em;
-}
-
-body div section div button:first-child:after {
-    content: "+";
-    margin-left: 0.4em;
-}
+/*   EINDE HEADER   */
 
 
 
-
-
+/*   BEGIN FORMULIER   */
 
 /* Dit is het formulier voor de filteropties. Deze staat nu uit voor styling */
 /*body div section form:nth-child(3) {
    display: none;
 }*/
 
-body div section form:nth-child(3) label {
-    display: block;
-    padding: 0.47em 0;
+section form:nth-child(3) p, body div section form:nth-child(3) input {
+    display: inline-flex;
+    justify-content: space-between;
 }
 
-body div section form:nth-child(3) label p {
-    width: 80%;
-}
-
-body div section form:nth-child(3) p, body div section form:nth-child(3) input {
-    display: inline-block;
-}
-
-body div section form:nth-child(3) input {
+section form:nth-child(3) input {
     border: 2px solid black;
     border-radius: 3px;
-    display: inline;
 }
 
-body div section form:nth-child(3) input:after {
-    content: "(10)";
-    display: table;
-    margin-left: 2em;
-    font-size: 0.7em;
-    vertical-align: middle;
+legend {
+    padding-left: 0;
 }
 
-body div section form:nth-child(3) input:checked + body div section form:nth-child(3) label {
-    background-color: black;
-}
+/*   EINDE FORMULIER HOME   */
 
 
 
 
-
+/*   BEGIN MAIN CONTENT HOME   */
 
 body main {
-    margin: 0 0 1.5em 0;
+    margin: 2.500em 0 1.5em 0;
 }
 
 article {
@@ -213,8 +173,10 @@ article img {
     width: 100%;
 }
 
-article span {
-    width: 50%;
+footer p {
+    font-size: 1em;
+    font-family: 'Roboto', sans-serif;
+    color: #675c53;
 }
 
 article h3, article footer {
@@ -225,3 +187,5 @@ article h3, article footer {
 article p {
     padding: 1.250em;
 }
+
+/*   EINDE MAIN CONTENT   */
