--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,7 @@ main>div {
     background-size: cover;
     height: auto;
     width: 100%;
-    padding: 1.875em 1em;
+    padding: 1.875em 1em 1.875em 0;
     margin-left: -1em;
     margin-bottom: 1.5em;
 }
@@ -13,38 +13,74 @@ main>div {
 main div section {
     padding: 1.875em 0.938em 0 0.938em;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 0.625em;
     -webkit-box-shadow: 0 1.333em 3em 0 rgba(103, 92, 83, .3);
     box-shadow: 0 1.333em 3em 0 rgba(103, 92, 83, .3);
 }
 
-section form:nth-of-type(2) input[type=checkbox] {
+h1 {
+    font-size: 1em;
+    font-weight: normal;
+    color: #e6772b;
+}
+
+main section:first-of-type h2 {
+    padding-top: 0;
+    font-size: 1.375em;
+}
+
+section form input[type=checkbox] {
     margin-left: -1000em;
     margin-top: 0;
     margin-bottom: 0;
 }
 
-section form:nth-of-type(2) span {
+section form span {
     display: flex;
-    padding: 0.625em;
-    border: 0.16em solid #f1f1f1;
-    border-radius: 10px;
-    margin-bottom: 10px;
-}
-
-section form:nth-of-type(2) input[type=checkbox]:checked+span {
-    background-color: #f1f1f1;
-}
-
-section form:nth-of-type(2) label span {
+    padding: 0.825em 0.625em 0.625em 0.625em;
+    border: 0.03125em solid #f1f1f1;
+    border-radius: 0.625em;
     margin-right: auto;
+    transition: 0.3s;
 }
 
-section form:nth-of-type(2) span:after {
+section form input[type=checkbox]:checked+span::before {
+    background-size: 85%;
+    border-color: #e7772b;
+}
+
+section form input[type=checkbox]:checked+span {
+    background-color: #f1f1f1;
+    transition: 0.3s;
+}
+
+section form input[type=checkbox] + span::before {
+    content: '';
+    width: 1.25em;
+    height: 1.25em;
+    border-radius: 4px;
+    background-color: #fff;
+    border: 2px solid #8d857e;
+    -webkit-transition: border-color .2s ease-in;
+    -o-transition: border-color .2s ease-in;
+    transition: border-color .2s ease-in;
+    display: inline-block;
+    margin-right: 1.25em;
+    background-image: url('../img/icons/vinkje.svg');
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-size: 0;
+    transition: 0.3s;
+    margin-top: -0.2em;
+}
+
+section form input[type=checkbox] + span::after {
     content: "(12)";
     font-size: 0.7em;
     margin-left: auto;
     color: black;
+    margin-top: 0.2em;
 }
 
 
