--- a/css/verhaal-detail.css
+++ b/css/verhaal-detail.css
@@ -59,5 +59,5 @@ main article footer ul li:first-of-type:before {
     width: 10px;
     height: 13px;
     display: inline-block;
-    margin-right: 10px;
+    margin-right: 1em;
 }
