--- a/css/home.css
+++ b/css/home.css
@@ -5,13 +5,14 @@ main>div {
     background-size: cover;
     height: auto;
     width: calc(100% + 1em);
-    padding: 1.875em 1em 1.875em 0;
+    padding: 1.875em 1em 3.5em 0;
     margin-left: -1em;
     margin-bottom: 1.5em;
 }
 
-main div section {
+main div section:first-of-type {
     padding: 1.875em 0.938em 0 0.938em;
+    margin-top: 2em;
     background-color: white;
     border-radius: 0 0.625em 0.625em 0;
     -webkit-box-shadow: 0 1.333em 3em 0 rgba(103, 92, 83, .3);
@@ -24,17 +25,165 @@ h1 {
     color: #e6772b;
 }
 
-main section:first-of-type h2 {
+main > div section:first-of-type h2 {
     padding-top: 0;
+    margin-left: 0;
 }
 
-section form input[type=checkbox] {
+
+
+/*   BEGIN FORMULIER   */
+
+section form:nth-child(3) p, body div section form:nth-child(3) input {
+    display: inline-flex;
+    justify-content: space-between;
+}
+
+section form:nth-child(3) input {
+    border: 0.13em solid black;
+    border-radius: 0.18em;
+}
+
+legend {
+    padding: 1.25em 0 0 0;
+    font-size: 1.2em
+}
+
+div section form:nth-of-type(2) {
+    margin-top: 1.5em;
+}
+
+/* Witte en grijzige vlak naast container */
+
+div section form:nth-of-type(2)::before {
+    content: "";
+    display: block;
+    position: relative;
+    height: 10.35em;
+    margin-top: -10.35em;
+    background-color: #ffffff;
+    margin-left: -30em;
+    width: 30em;
+}
+
+div section form:nth-of-type(2) fieldset::before {
+    content: "";
+    display: block;
+    position: relative;
+    height: 3.65em;
+    width: 30em;
+    margin-left: -30em;
+    margin-bottom: -3.4em;
+    background-color: #f8f6f3;
+}
+
+
+/*  Alles wat hieronder uitgecomment is moet weer actief zijn als er op de button filteren geklikt wordt  */
+
+div section form:nth-of-type(2) div {
+    display: inline-flex;
+    flex-wrap: wrap;
+    width: calc(100% + 2em);
+    margin-left: -1em;
+    padding: 1em;
+    left: 0;
+    border-radius: 0 0 0.625em 0;
+    box-sizing: border-box;
+    background-color: #f7f4f1;
+    bottom: 0;
+    z-index: 0;
+}
+
+div section form:nth-of-type(2) div p {
+    font-weight: bold;
+    font-size: 1em;
+    margin-top: 0.2em;
+}
+
+div section form:nth-of-type(2) div label:first-of-type {
+    margin-left: 1em;
+}
+
+div section form:nth-of-type(2) div label:first-of-type, div section form:nth-of-type(2) div label:nth-of-type(2) {
+    padding-right: 1em;
+}
+
+div section form:nth-of-type(2) div label {
+    border-bottom: 0.1em solid #685c53;
+}
+
+div section form:nth-of-type(2) div label input[type="radio"]:checked + span {
+    color: #e7772b;
+    position: relative;
+}
+
+div section form:nth-of-type(2) div label input[type="radio"]:checked + span::after {
+    content: "";
+    width: 100%;
+    height: 0.2em;
+    background-color: #e7772b;
+    display: block;
+    position: absolute;
+    bottom: -0.3em;
+}
+
+div section form:nth-of-type(2) div span {
+    font-weight: lighter;
+    color: #685c53;
+    cursor: pointer;
+    border: none;
+    border-radius: 0;
+    padding: 0;
+}
+
+input[name*="sorteren"] {
+    margin-left: -1000em;
+    height: 0;
+}
+
+div section form:nth-of-type(2) div button[value="volgorde"] {
+    margin-left: auto;
+    width: 1em;
+    margin-top: 0;
+    padding-bottom: 0.3em;
+    border-bottom: 0.15em solid #685c53;
+    background-color: transparent;
+    display: block;
+    color: black;
+    padding: 0;
+    border-radius: 0;
+}
+
+div section form:nth-of-type(2) div button[value="volgorde"] img {
+    width: 100%;
+    border-radius: 0;
+    box-shadow: none;
+    margin-left: 0;
+    margin-top: 0;
+}
+
+div section form:nth-of-type(2) div button[value="filteren"] {
+    display: none;
+    margin: 2em auto 0 auto;
+    background-color: #d6cec5;
+}
+
+/*   EINDE FORMULIER HOME   */
+
+
+/*   Filters overlay  */
+
+section form input[type=checkbox], section form.toon-filters input[type=radio] {
     margin-left: -1000em;
     margin-top: 0;
     margin-bottom: 0;
 }
 
-section form input[type=checkbox]:focus + section form span {
+section form.toon-filters input[type=radio] {
+    margin-top: 1em;
+}
+
+section form input[type=checkbox]:focus + section form span, section form.toon-filters input[type=radio]:focus + section form span {
     border-color: #e7772b;
 }
 
@@ -47,29 +196,22 @@ section form span {
     transition: 0.3s;
 }
 
-section form input[type=checkbox]:checked+span::before {
+section form input[type=checkbox]:checked+span::before, section form.toon-filters input[type=radio]:checked+span::before {
     background-size: 85%;
     border-color: #e7772b;
 }
 
-section form input[type=checkbox]:checked+span {
-    background-color: #f1f1f1;
-    transition: 0.3s;
-}
-
-section form input[type=checkbox] + span::before {
+section form input[type=checkbox] + span::before, section form.toon-filters input[type=radio] + span::before {
     content: '';
     width: 1.25em;
     height: 1.25em;
-    border-radius: 4px;
     background-color: #fff;
-    border: 2px solid #8d857e;
+    border: 0.12em solid #8d857e;
     -webkit-transition: border-color .2s ease-in;
     -o-transition: border-color .2s ease-in;
     transition: border-color .2s ease-in;
     display: inline-block;
     margin-right: 1.25em;
-    background-image: url('../img/icons/vinkje.svg');
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -78,15 +220,33 @@ section form input[type=checkbox] + span::before {
     margin-top: -0.2em;
 }
 
-section form input[type=checkbox] + span::after {
+section form.toon-filters input[type=checkbox] + span::before {
+    background-image: url('../img/icons/vinkje.svg');
+    border-radius: 0.25em;
+}
+
+section form input[type=checkbox]:checked+span {
+    background-color: #f1f1f1;
+    transition: 0.3s;
+}
+
+section form.toon-filters input[type=radio] + span::before {
+    border-radius: 6em;
+    background-image: url('../img/icons/cirkel.svg');
+}
+
+section form.toon-filters input[type=radio]:checked+span::before {
+    transition: 0.3s;
+    background-size: 50%;
+}
+
+section form input[type=checkbox] + span::after, section form.toon-filters input[type=radio] + span::after {
     content: "(12)";
     font-size: 0.7em;
     margin-left: auto;
     color: black;
     margin-top: 0.2em;
 }
-
-/*   Filters overlay  */
 
 div section form:first-of-type button::before {
     content: "";
@@ -121,42 +281,30 @@ div section form:first-of-type {
     display: none;
 }
 
+form.toon-filters button[value="volgorde"], 
+form.toon-filters button[value="filteren"] {
+    display: none;
+}
 
 /*   EINDE TOP BLOK   */
 
 
-/*   VERHAAL V/D DAG   */
+/*   Uitgelicht   */
 
-main article:first-of-type img {
-    border-radius: 0.66em 0.66em 0 0.66em;
-    width: calc(100% - 1em);
-    margin-left: -1em;
-    -webkit-box-shadow: 0 -0.1em 1.13em 0 rgba(103,92,83,.3);
-    -moz-box-shadow: 0 -0.1em 1.13em 0 rgba(103,92,83,.3);
-    box-shadow: 0 -0.1em 1.13em 0 rgba(103,92,83,.3);
-    margin-top: -1.25em;
-}
-
-main article:first-of-type::before {
-    content: "";
-    display: inherit;
-    z-index: -1;
-    height: 7.25em;
-    background-color: #f0f0f0;
-    margin-top: -6em;
-    width: 200vw;
-    margin-left: -100vw;
-}
-
-main article:first-of-type {
+main section:nth-of-type(2n + 1) {
     box-shadow: none;
     padding: 0;
     border-radius: 0;
     padding-left: 1em;
+    padding-top: 2em;
     box-sizing: border-box;
 }
 
-main article:first-of-type div {
+main section:first-of-type {
+    padding-top: 0;
+}
+
+main section:nth-of-type(2n + 1) div {
     background-color: #ffffff;
     margin-top: -0.25em;
     padding: 0 1em;
@@ -167,18 +315,61 @@ main article:first-of-type div {
     box-shadow: 0 0.5em 1.13em 0 rgba(103,92,83,.3);
 }
 
-/*   Verhalen    */
+main section:nth-of-type(2n + 1) footer div {
+    border-radius: 0;
+    box-shadow: none;
+    padding: 0;
+}
+
+main section:nth-of-type(2n + 1) h2 {
+    margin-left: -0.6em;
+}
+
+main section:first-of-type img {
+        margin-top: -1.25em;
+}
+
+main section:nth-of-type(2n + 1) img {
+    border-radius: 0.66em 0.66em 0 0.66em;
+    width: 100%;
+    margin-left: -1em;
+    -webkit-box-shadow: 0 -0.1em 1.13em 0 rgba(103,92,83,.3);
+    -moz-box-shadow: 0 -0.1em 1.13em 0 rgba(103,92,83,.3);
+    box-shadow: 0 -0.1em 1.13em 0 rgba(103,92,83,.3);
+}
+
+main section:first-of-type article:first-of-type::before {
+    content: "";
+    display: inherit;
+    z-index: -1;
+    height: 7.25em;
+    background-color: #f0f0f0;
+    margin-top: -6em;
+    width: 200vw;
+    margin-left: -100vw;
+}
 
 
-article {
+/*   Aanbevolen  */
+
+main section:nth-of-type(2n + 2) {
+    padding-top: 2em;
+}
+
+main section:nth-of-type(2n + 2) > div {
+    display: flex;
+    width: 300%;
+}
+
+main section:nth-of-type(2n + 2) article {
     border-radius: 0.667em;
     -webkit-box-shadow: 0 0.5em 1.13em 0 rgba(103,92,83,.3);
     -moz-box-shadow: 0 0.5em 1.13em 0 rgba(103,92,83,.3);
     box-shadow: 0 0.5em 1.13em 0 rgba(103,92,83,.3);
     padding: 0 1.25em;
-    margin-bottom: 1.875em;
     max-width: 37.5em;
-    margin: 0 auto 1.875em auto;
+    margin: 0 0.8em 2em 0.8em;
+    margin-bottom: 1.9em;
 }
 
 article a {
@@ -203,8 +394,44 @@ article h3 {
     color: #000000;
 }
 
-article p {
-    padding: 1.250em;
+
+/*  Bullet points */
+
+main section:nth-of-type(2n + 2) > ul {
+    display: flex;
+    justify-content: center;
+    width: auto;
+    margin: 0 auto;
+    padding-left: 0;
+}
+
+main section:nth-of-type(2n + 2) > ul li:first-of-type button {
+    background-color: #000000;
+}
+
+main section:nth-of-type(2n + 2) > ul li {
+    text-align: center;
+    list-style-type: none;
+}
+
+main section:nth-of-type(2n + 2) > ul li button {
+    background-color: #8b837e;
+    border-radius: 10em;
+    padding: 0.7em 0.7em;
+    font-size: 0.7em;
+    margin: 0 0.4em;
+}
+
+main section:nth-of-type(2n + 2) > ul li button:hover {
+    background-color: #000000;
+}
+
+
+/*  Meta Data  */
+
+article footer > span:first-of-type {
+    font-weight: normal;
+    margin-bottom: 0.3em;
 }
 
 article footer span {
@@ -215,36 +442,91 @@ article footer span {
 }
 
 article footer {
-    padding: 0.3em 0 1.5em 0;
+    padding: 0 0 1.5em 0;
 }
 
-article footer p {
+
+/* Datum en leesduur */
+
+article footer div:first-of-type {
+    display: flex;
+    margin-bottom: 0.5em;
+}
+
+article footer div:first-of-type span:last-of-type {
+    text-align: right;
+}
+
+article footer div:first-of-type span:last-of-type::before {
+    content: "";
+    display: inline-block;
+    background-image: url("../img/icons/leesduur.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 1em;
+    height: 1em;
+    margin-right: 0.4em;
+}
+
+
+/* Likes en views metadata */
+
+article footer div:nth-of-type(2) {
+    display: inline-flex;
+    width: 100%;
+    margin-top: 0.5em;
+}
+
+article footer div:nth-of-type(2) span:first-of-type, article footer div:nth-of-type(2) span:nth-of-type(2) {
     display: inline-block;
     border-bottom: 0.13em solid #50a3de;
     color: #50a3de;
+    width: auto;
     text-align: right;
     padding: 1em 0 0 0;
 }
 
-article footer p:first-of-type::before {
+article footer div:nth-of-type(2) span:first-of-type::before {
     background-image: url(../img/icons/likes.svg);
     width: 1em;
 }
 
-article footer p:nth-of-type(2)::before {
+article footer div:nth-of-type(2) span:nth-of-type(2)::before {
     background-image: url(../img/icons/weergave.svg);
     width: 1.5em;
 }
 
-article footer p:nth-of-type(2) {
+article footer div:nth-of-type(2) span:nth-of-type(2) {
     margin-left: 0.5em;
 }
 
-article footer p:first-of-type::before, article footer p:nth-of-type(2)::before  {
+article footer div:nth-of-type(2) span:first-of-type::before, article footer div:nth-of-type(2) span:nth-of-type(2)::before  {
     content: "";
     display: inline-block;
     height: 1em;
     background-size: cover;
     background-repeat: no-repeat;
     margin-right: 0.63em;
+}
+
+
+/* Likes en views buttons */
+
+article footer div:nth-of-type(2) button:first-of-type {
+    margin-left: auto;
+    margin-right: 0.5em;
+}
+
+article footer div:nth-of-type(2) button:first-of-type {
+    width: 2.5em;
+    background-image: url("/img/icons/like-knop.svg");
+    background-size: contain;
+    background-position: center;
+}
+
+article footer div:nth-of-type(2) button:nth-of-type(2) {
+    width: 2.5em;
+    background-image: url("/img/icons/verhaal-toevoegen-knop.svg");
+    background-size: contain;
+    background-position: center;
 }
