--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,12 @@ p {
     margin: 0;
 }
 
-h1, h2, h3, h4, legend, b {
+h1,
+h2,
+h3,
+h4,
+legend,
+b {
     font-weight: 700;
 }
 
@@ -47,7 +52,7 @@ h1 {
 h2 {
     font-size: 1.4em;
     padding-top: 1em;
-    padding-bottom: 1.0313em;
+    padding-bottom: 1em;
 }
 
 h3 {
@@ -73,20 +78,24 @@ label {
     font-weight: 500;
 }
 
-input, button, p {
+input,
+button,
+p {
     font-size: 1em;
 }
 
-button:focus, button:active, button:visited {
+button:focus,
+button:active,
+button:visited {
     outline: none;
 }
 
-input:focus { 
+input:focus {
     outline: none !important;
     border-color: rgba(0, 0, 0, 0);
 }
 
-textarea:focus { 
+textarea:focus {
     outline: none !important;
     border-color: rgba(0, 0, 0, 0);
 }
@@ -103,37 +112,71 @@ button {
     border: none;
     display: inline;
     font-size: 1em;
+    cursor: pointer;
 }
 
-/*   EINDE ALGEMEEN   */
+header ul li {
+    cursor: pointer;
+}
 
+
+/*   EINDE ALGEMEEN   */
 
 
 /*   BEGIN HEADER HOME   */
 
 header {
     width: 100%;
-    height: 2.5em;
+    height: auto;
     top: 0;
-    margin-left: -15px;
+    margin-left: -1em;
     padding: 0 1em;
-    position: fixed;   
-    display: inline-flex;
-    justify-content: flex-end;
+    position: fixed;
     background-color: white;
     box-sizing: border-box;
+    display: flex;
+    justify-content: center;
     z-index: 3;
+    -webkit-box-shadow: 0px 2px 10px 0px rgba(50, 50, 50, 0.1);
+    -moz-box-shadow: 0px 2px 10px 0px rgba(50, 50, 50, 0.1);
+    box-shadow: 0px 2px 10px 0px rgba(50, 50, 50, 0.1);
 }
 
-header a:first-of-type {
+header ul {   
+    width: 100%;
     margin: 0 auto;
+    padding: 0;
 }
 
-header a:nth-of-type(2) {
-    margin-right: 1em;
+header ul li {
+    display: inline-block;
 }
 
-header img {
+header li:first-of-type {
+    margin-left: calc(50% - 4.4em);
+}
+
+header ul li:nth-of-type(2) {
+    margin-left: calc(50% - 9em);
+    margin-right: 0.5em;
+    width: 1.8em;
+}
+
+header li a, header li, header ul {
+    height: 2.8em;
+}
+
+header li img {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
+
+header li:nth-of-type(2), header li:nth-of-type(3) {
+    width: 1.5em;
+}
+
+header li:first-of-type img {
     height: 100%;
     padding: 0.375em 0;
     box-sizing: border-box;
@@ -142,128 +185,15 @@ header img {
 /*   EINDE HEADER   */
 
 
-
-/*   BEGIN FORMULIER   */
-
-section form:nth-child(3) p, body div section form:nth-child(3) input {
-    display: inline-flex;
-    justify-content: space-between;
-}
-
-section form:nth-child(3) input {
-    border: 2px solid black;
-    border-radius: 3px;
-}
-
-legend {
-    padding: 20px 0 0 0;
-}
-
-div section form:nth-of-type(2) {
-    margin-top: 1em;
-}
-
-/*  Alles wat hieronder uitgecomment is moet weer actief zijn als er op de button filteren geklikt wordt  */
-
-div section form:nth-of-type(2) div {
-    display: inline-flex;
-    flex-wrap: wrap;
-/*    width: 100%;*/
-    width: calc(100% + 2em);
-    margin-left: -1em;
-    padding: 1em;
-    left: 0;
-    border-radius: 0 0 0.625em 0;
-/*    padding: 1.8em;*/
-    box-sizing: border-box;
-    background-color: #f7f4f1;
-/*    position: fixed;*/
-    bottom: 0;
-}
-
-div section form:nth-of-type(2) div p {
-    font-weight: bold;
-    font-size: 1em;
-    margin-top: 0.2em;
-}
-
-div section form:nth-of-type(2) div label:first-of-type {
-    margin-left: 1em;
-}
-
-div section form:nth-of-type(2) div label:first-of-type, div section form:nth-of-type(2) div label:nth-of-type(2) {
-    padding-right: 1em;
-}
-
-div section form:nth-of-type(2) div label {
-    border-bottom: 0.1em solid #685c53;
-}
-
-div section form:nth-of-type(2) div label input[type="radio"]:checked + span {
-    color: #e7772b;
-    position: relative;
-}
-
-div section form:nth-of-type(2) div label input[type="radio"]:checked + span::after {
-    content: "";
-    width: 100%;
-    height: 0.2em;
-    background-color: #e7772b;
-    display: block;
-    position: absolute;
-    bottom: -0.3em;
-}
-
-div section form:nth-of-type(2) div span {
-    font-weight: lighter;
-    color: #685c53;
-    cursor: pointer;
-    border: none;
-    border-radius: 0;
-    padding: 0;
-}
-
-input[name*="sorteren"] {
-    margin-left: -1000em;
-    height: 0;
-}
-
-div section form:nth-of-type(2) div button[value="volgorde"] {
-    margin-left: auto;
-    width: 1em;
-    margin-top: 0;
-    padding-bottom: 0.3em;
-    border-bottom: 0.15em solid #685c53;
-    background-color: transparent;
-    display: block;
-    color: black;
-    padding: 0;
-    border-radius: 0;
-}
-
-div section form:nth-of-type(2) div button[value="volgorde"] img {
-    width: 100%;
-}
-
-div section form:nth-of-type(2) div button[value="filteren"] {
-    display: none;
-/*    display:  ;*/
-    margin: 2em auto 0 auto;
-    background-color: #d6cec5;
-}
-
-/*   EINDE FORMULIER HOME   */
-
-
-
-
 /*   Main content en verhalen / articles   */
 
 body main {
     margin: 2.500em 0 1.5em 0;
 }
 
+
 /*   EINDE MAIN CONTENT   */
+
 
 /*   Onderkant pagina en Footer   */
 
@@ -275,7 +205,6 @@ aside:before {
     height: 1.25em;
     background-color: #f9f9f8;
     z-index: 1;
-    
 }
 
 aside {
@@ -287,16 +216,16 @@ aside {
     margin-top: 4.375em;
 }
 
-aside section {
+aside section:first-of-type {
     background-color: #ffffff;
     padding: 0.5em 1.25em 1.5em;
     box-sizing: border-box;
     border-radius: 0.63em;
     margin-top: -1em;
     z-index: 2;
-    -webkit-box-shadow: 0 0.5em 1.13em 0 rgba(103,92,83,.3);
-    -moz-box-shadow: 0 0.5em 1.13em 0 rgba(103,92,83,.3);
-    box-shadow: 0 0.5em 1.13em 0 rgba(103,92,83,.3);
+    -webkit-box-shadow: 0 0.5em 1.13em 0 rgba(103, 92, 83, .3);
+    -moz-box-shadow: 0 0.5em 1.13em 0 rgba(103, 92, 83, .3);
+    box-shadow: 0 0.5em 1.13em 0 rgba(103, 92, 83, .3);
 }
 
 aside h3 {
@@ -337,7 +266,10 @@ aside img {
     display: inline-block;
 }
 
-body > footer {
+
+/* Footer */
+
+body>footer:last-of-type {
     background-color: #ffffff;
     width: calc(100% + 2em);
     margin-left: -1em;
@@ -345,25 +277,153 @@ body > footer {
     box-sizing: border-box;
 }
 
-body > footer section div {
+body>footer:last-of-type section div {
     display: flex;
     padding: 2.5em 0 1.25em;
 }
 
-body > footer section div img:nth-of-type(2), body > footer section div img:nth-of-type(3),  {
-    width: 30px;
-    height: 30px;
+body>footer:last-of-type section div img:nth-of-type(2),
+body>footer section div img:nth-of-type(3),
+{
+    width: 1.875em;
+    height: 1.875em;
 }
 
-body > footer section div img:nth-of-type(2) {
+body>footer:last-of-type section div img:nth-of-type(2) {
     margin-left: auto;
     margin-right: 0.63em;
 }
 
-body > footer section a {
+body>footer:last-of-type section a {
     color: #afa9a2;
     text-decoration: none;
     width: 100%;
     display: block;
     line-height: 2em;
 }
+
+
+/* Minor Breakpoints */
+
+header ul,
+main div section:first-of-type,
+main section:nth-of-type(2n + 1),
+main section:nth-of-type(2n + 2),
+aside section,
+body > footer section{
+    max-width: 37.5em;
+    margin: 0 auto;
+}
+
+/* Major Breakpoints */
+
+@media (min-width: 37.5em) {
+    h1 {
+        font-size: 2.1em;
+    }
+    
+    h2 {
+        font-size: 1.75em;
+    }
+    
+    h3 {
+        font-size: 1.55em;
+    }
+    
+    h4 {
+        font-size: 1.35em;
+    }
+    
+    h5 {
+        font-size: 1.15em;
+    }
+    
+    body div section form:nth-of-type(2)::before,
+    body div section form:nth-of-type(2) fieldset::before,
+    main > div section > button,
+    main > div section form:first-of-type button {
+        display: none;
+    }
+    
+    main > div section form:first-of-type {
+        display: inherit;
+    }
+    
+    header ul, main div section:first-of-type, main section:nth-of-type(2n + 1), main section:nth-of-type(2n + 2), aside section, body > footer section {
+        max-width: 60em;
+    }
+    
+/*  Menu  */
+    header li:first-of-type {
+        margin-left: 0;
+    }
+    
+    header ul li:nth-of-type(2) {
+        margin-left: calc(100% - 14em);
+    }
+    
+/*  Filteren sectie  */
+    body main > div {
+        padding: 1.875em 0 3.5em;
+        width: calc(100% + 2em);
+    }
+    
+    body main div section:first-of-type {
+        border-radius: 0.625em;
+        margin-left: 1em;
+        margin-right: 1em;
+    }
+    
+    body div section form:nth-of-type(2) div {
+        border-radius: 0 0 0.625em 0.625em;
+    }
+    
+    main > div section form:first-of-type {
+        background-color: transparent;
+    }
+    
+    body section form span {
+        background-color: #ffffff;
+        margin-top: -1em;
+        border-radius: 0;
+    }
+    
+/*  Uitgelicht verhalen   */
+    body main section:first-of-type article:first-of-type::before {
+        margin-top: -7em;
+    }
+    
+    main section:nth-of-type(2n + 1) img {
+        max-height: 30em;
+    }
+    
+/*  Aanbevolen verhalen  */
+    
+    body main section:nth-of-type(2n + 2) article {
+        position: relative;
+    }
+    
+    body main section:nth-of-type(2n + 2) > div {
+        display: block;
+        width: 100%;
+    }
+    
+    body main section:nth-of-type(2n + 2) > div img,
+    body main section:nth-of-type(2n + 2) article a > div {
+        width: 50%;
+        max-width: 50%;
+        display: inline-block;
+        box-sizing: border-box;
+    }
+    
+    body main section:nth-of-type(2n + 2) article a > div {
+        position: absolute;
+        top: 0;
+    }
+    
+    body main section:nth-of-type(2n + 2) > div img {
+        border-radius: 0.667em 0 0 0.667em;
+    }
+}
+
+@media and screen (max-width:60em) {}
