--- a/css/progress-bar.css
+++ b/css/progress-bar.css
@@ -13,20 +13,129 @@ body {
 }
 */
 
-progress {
-    width: calc(100% + 1.875em);
+progress,
+.body-progressbar-fixed progress + h1::before {
+    width: calc(100% + 2em);
     height: 0.35em;
     background-color: #f2f1f1;
-    margin-left: -0.9375em; 
+    margin-left: -1em;
+    margin-right: -2.5em;
+    display: inline-flex;
+}
+
+.body-progressbar-fixed progress + ul::before {
+    content: "";
+    display: inline-block;
 }
 
 progress::-webkit-progress-value {
     background: #fcda00;
 }
 
-progress.fixed {
+.body-progressbar-fixed progress {
     position: fixed;
-    top: 2.5em;
+    top: 2.8em;
     margin-left: -2em;
     width: calc(100% + 1em);
+    z-index: 1;
+    left: 1em;
+}
+
+main article > img {
+    width: calc(100% + 2em);
+    margin-left: -1em;
+}
+
+.body-progressbar-fixed progress + ul {
+    position: fixed;
+    display: inline-flex;
+    top: 2.1em;
+    left: 1em;
+}
+
+.body-progressbar-fixed main article:first-child div:first-of-type a {
+        padding: 1.2em;
+        box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.1);
+}
+
+main > article:first-of-type div:nth-of-type(2) > ul {
+    justify-content: space-between;
+    width: calc(100% + 0em);
+    margin-left: -1em;
+    padding: 0;
+    z-index: 1;
+}
+
+main > article:first-of-type div:nth-of-type(2) > ul li a {
+    width: 100%;
+    height: 2em;
+    padding-top: 0.4em;
+    display: inline-block;
+    box-sizing: border-box;
+    color: #000000;
+}
+
+main > article:first-of-type div:nth-of-type(2) > ul li {
+    list-style-type: none;
+    text-align: center;
+    background-color: #f7f4f1;
+    display: inline-block;
+    margin-left: auto;
+    width: 3em;
+    max-height: 2em;
+    border-radius: 0 0 0.677em 0.677em;
+}
+
+/* 1/4 van het verhaal */
+
+.een main > article:first-of-type div:nth-of-type(2) > ul li:first-of-type a {
+    color: white;
+}
+
+.een main > article:first-of-type div:nth-of-type(2) > ul li:first-of-type {
+    background-color: #fcda00;
+}
+
+/* 1/2 van het verhaal */
+
+.twee main > article:first-of-type div:nth-of-type(2) > ul li:first-of-type a, .twee main > article:first-of-type div:nth-of-type(2) > ul li:nth-of-type(2) a {
+    color: white;
+}
+
+.twee main > article:first-of-type div:nth-of-type(2) > ul li:first-of-type, .twee main > article:first-of-type div:nth-of-type(2) > ul li:nth-of-type(2) {
+    background-color: #fcda00;
+}
+
+/* 3/4 van het verhaal */
+
+.drie main > article:first-of-type div:nth-of-type(2) > ul li:first-of-type a, .drie main > article:first-of-type div:nth-of-type(2) > ul li:nth-of-type(2) a, .drie main > article:first-of-type div:nth-of-type(2) > ul li:nth-of-type(3) a {
+    color: white;
+}
+
+.drie main > article:first-of-type div:nth-of-type(2) > ul li:first-of-type, .drie main > article:first-of-type div:nth-of-type(2) > ul li:nth-of-type(2), .drie main > article:first-of-type div:nth-of-type(2) > ul li:nth-of-type(3) {
+    background-color: #fcda00;
+}
+
+/* 4/4 van het verhaal */
+
+.vier main > article:first-of-type div:nth-of-type(2) > ul li:first-of-type a, .vier main > article:first-of-type div:nth-of-type(2) > ul li:nth-of-type(2) a, .vier main > article:first-of-type div:nth-of-type(2) > ul li:nth-of-type(3) a, .vier main > article:first-of-type div:nth-of-type(2) > ul li:nth-of-type(4) a {
+    color: white;
+}
+
+.vier main > article:first-of-type div:nth-of-type(2) > ul li:first-of-type, .vier main > article:first-of-type div:nth-of-type(2) > ul li:nth-of-type(2), .vier main > article:first-of-type div:nth-of-type(2) > ul li:nth-of-type(3), .vier main > article:first-of-type div:nth-of-type(2) > ul li:nth-of-type(4) {
+    background-color: #fcda00;
+}
+
+.remove-buttons main > article div:first-of-type {
+    bottom: 0;
+}
+
+article div > ul, .remove-buttons main article:first-child div:first-of-type button {
+    display: inherit;
+    border-radius: 0.64em;
+    height: 3.5em;
+}
+
+article div > ul {
+    display: none;
 }
